--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,7 @@
 APP_ENV=testing
+APP_URL=http://localhost
 APP_DEBUG=true
-APP_KEY=base64:randomkeyvalue
+APP_KEY=base64:bR+CbOoGECVqY8kCDs5DQslIAY9Q1oFHvSQwuCBLvjM=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -12,7 +13,11 @@ DB_DATABASE=:memory:
 CACHE_DRIVER=array
 
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=array
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
+SESSION_DOMAIN=null
+SESSION_SECURE_COOKIE=false
+SESSION_SAME_SITE=lax
 
 TELESCOPE_DB_CONNECTION=sqlite
 TELESCOPE_DB_DATABASE=:memory:
