--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+JWT_SECRET=your-secret-key-here
+JWT_TTL=60
+JWT_REFRESH_TTL=20160
